--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
-<body ng-cloak="" ng-controller="navCtrl">
+<body ng-cloak ng-controller="navCtrl">
     <header>
         <div class="cornerlogo">
             <p>A&W Root Beer
@@ -133,9 +133,9 @@
 <script src="assets/js/angular-dragdrop.min.js"></script>
 <script src="assets/js/resource.js"></script>
 <script src="assets/app/app.js"></script>
-<script src="assets/app/service.js"></script>
 <script src="assets/app/directives.js"></script>
 <script src="assets/app/authCtrl.js"></script>
+<script src="assets/app/service.js"></script>
 
 
 </html>
